Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_NULLARY_LABEL/unexpected_type.st
language core;

extend with #variants,
            #structural-subtyping,
						#nullary-variant-labels;

fn fail(n : Nat) -> <| failure : Nat |> {
	return <| failure = 0 |>
}

fn main(n : Nat) -> <| failure |> {
  return fail(n)
}